# nmrmetaproc

./: .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md  colab_demo.py  paper.bib  paper.md  pyproject.toml
example_data/Control/Control_01/: acqus  fid
example_data/Control/Control_01/pdata/1/: procs
example_data/Control/Control_02/: acqus  fid
example_data/Control/Control_02/pdata/1/: procs
example_data/Control/Control_03/: acqus  fid
example_data/Control/Control_03/pdata/1/: procs
example_data/Thrombosis/Thrombosis_01/: acqus  fid
example_data/Thrombosis/Thrombosis_01/pdata/1/: procs
example_data/Thrombosis/Thrombosis_02/: acqus  fid
example_data/Thrombosis/Thrombosis_02/pdata/1/: procs
example_data/Thrombosis/Thrombosis_03/: acqus  fid
example_data/Thrombosis/Thrombosis_03/pdata/1/: procs
examples/: basic_usage.py  colab_demo_part1.ipynb  colab_demo_real_data.ipynb
nmrmetaproc/: __init__.py  __main__.py  alignment.py  cli.py  io.py  normalization.py  processing.py  processor.py  qc.py  utils.py  version.py
tests/: conftest.py  test_bruker_conventions.py  test_integration.py  test_io.py  test_normalization.py  test_processing.py  test_qc.py
