[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmrmetaproc"
version = "1.0.0"
description = "NMR Metabolomics Spectral Processor - raw Bruker FID to analysis-ready CSV"
authors = [
    { name = "Folorunsho Bright Omage", email = "omagefolorunsho@gmail.com" },
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["NMR", "metabolomics", "spectral processing", "chemometrics", "Bruker"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "nmrglue>=0.9",
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "tqdm>=4.60",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/omagebright/nmrmetaproc"
Repository = "https://github.com/omagebright/nmrmetaproc"

[project.scripts]
nmrmetaproc = "nmrmetaproc.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["nmrmetaproc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]